languages/io-automaton-fe/src/test/resources/valid/symtab/ForTransitionCreationTest.ioautomaton
package valid.symtab;

automaton ForTransitionCreationTest{
    
	//in, var and out dont matter
    input int a;
    output int b;
    
    
    //states
    state A, B;
    initial A;
    
    //Transitions Guard, Stimulus, Reaction
    A -> B;
    A -> B /{b=2};
    A -> B {a=1};
    A -> B {a=1}/{b=2};
    A -> B [a==1];
    A -> B [a==1] /{b=2};
    A -> B [a==1] {a=1};
    A -> B [a==1] {a=1} / {b=2};
    
    A;    
    
}